[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/Actor/Enemy/EnemyStateMachine.gd" type="Script" id=1]
[ext_resource path="res://src/Actor/Enemy/EnemyDefaultState.gd" type="Script" id=2]
[ext_resource path="res://src/Actor/Enemy/EnemyChaseState.gd" type="Script" id=3]
[ext_resource path="res://src/Actor/Enemy/EnemyWanderState.gd" type="Script" id=4]
[ext_resource path="res://src/Actor/Enemy/EnemyBaseState.gd" type="Script" id=5]

[node name="EnemyStateMachine" type="Node"]
script = ExtResource( 1 )

[node name="DefaultState" type="Node" parent="."]
script = ExtResource( 2 )

[node name="WanderState" type="Node" parent="."]
script = ExtResource( 4 )

[node name="ChaseState" type="Node" parent="."]
script = ExtResource( 3 )

[node name="BaseState" type="Node" parent="."]
script = ExtResource( 5 )
